fix: error text in text inputs

--- a/apps/client/src/app/shared/ui/components/text-input/text-input.component.html
+++ b/apps/client/src/app/shared/ui/components/text-input/text-input.component.html
@@ -5,5 +5,7 @@
 
 	@if (isInvalid) {
 	<strong class="label-small error-message">{{getErrorMessage()}}</strong>
+	} @else {
+	<strong class="label-small error-message invisible" aria-hidden>A</strong>
 	}
 </div>
