--- a/apps/client/src/app/shared/ui/components/text-input/text-input.component.css
+++ b/apps/client/src/app/shared/ui/components/text-input/text-input.component.css
@@ -12,10 +12,11 @@ label {
 /* TODO: use semantic color here */
 .error-message {
 	color: var(--error-500);
-	position: absolute;
-	bottom: 0;
-	left: 0;
-	transform: translate(0.08rem, 1.35rem);
+	margin-left: 0.25rem;
+}
+
+.invisible {
+	visibility: hidden;
 }
 
 input {
