--- a/apps/client/src/app/shared/ui/components/password-input/password-input.component.html
+++ b/apps/client/src/app/shared/ui/components/password-input/password-input.component.html
@@ -1,3 +1,5 @@
+<!-- TODO: MAKE ERROR LABEL DONT SHIFT THE LAYOUT -->
+
 <div class="container">
 	<label [for]="inputId" class="label-medium">{{label}}</label>
 	<div class="input-container" [class.error]="isInvalid">
