--- a/apps/client/src/app/core/components/tab-bar/tab-bar.component.html
+++ b/apps/client/src/app/core/components/tab-bar/tab-bar.component.html
@@ -3,7 +3,10 @@
 
 
 <div class="middle-space">
-	<div class="main-circle"></div>
+	<div class="main-circle">
+		<div class="circle-icon" [style]="{mask: 'url(\'assets/svgs/Hand.svg\') no-repeat center', 'mask-size': '2.25rem'}">
+		</div>
+	</div>
 	<div class="outline-circle"></div>
 	<div class="circle-background"></div>
 </div>
