feat: navigation on tab bar

--- a/apps/client/src/app/core/components/tab-bar/tab-bar.component.html
+++ b/apps/client/src/app/core/components/tab-bar/tab-bar.component.html
@@ -1,5 +1,5 @@
-<tab-bar-item iconSrc="assets/svgs/Home.svg" label="Inicio"></tab-bar-item>
-<tab-bar-item iconSrc="assets/svgs/Users.svg" label="MoviPanas"></tab-bar-item>
+<tab-bar-item iconSrc="assets/svgs/Home.svg" label="Inicio" href="/app"></tab-bar-item>
+<tab-bar-item iconSrc="assets/svgs/Users.svg" label="MoviPanas" href="/app/movipanas"></tab-bar-item>
 
 
 <div class="middle-space">
@@ -11,5 +11,5 @@
 	<div class="circle-background"></div>
 </div>
 
-<tab-bar-item iconSrc="assets/svgs/MapPoint.svg" label="Mis Destinos"></tab-bar-item>
-<tab-bar-item iconSrc="assets/svgs/User.svg" label="Perfil"></tab-bar-item>
+<tab-bar-item iconSrc="assets/svgs/MapPoint.svg" label="Mis Destinos" href="/app/my-destinations"></tab-bar-item>
+<tab-bar-item iconSrc="assets/svgs/User.svg" label="Perfil" href="/app/profile"></tab-bar-item>
