--- a/apps/client/src/app/core/components/tab-bar-item/tab-bar-item.component.html
+++ b/apps/client/src/app/core/components/tab-bar-item/tab-bar-item.component.html
@@ -1,4 +1,4 @@
-<a class="label-small" [routerLink]="href">
+<a class="label-small" [routerLink]="href" [routerLinkActive]="'is-active'" [routerLinkActiveOptions]="{exact: true}">
 	<div class="icon" [ngStyle]="{mask: 'url(' + iconSrc + ') no-repeat center', 'mask-size': '1.9375rem'}">
 	</div>
 	{{ label }}
