--- a/apps/client/src/app/pages/profile/profile.component.html
+++ b/apps/client/src/app/pages/profile/profile.component.html
@@ -11,18 +11,29 @@
 	<button mButton [severity]="'contrast'" class="edit-profile-button">Editar perfil</button>
 
 	<ul class="user-preferences paragraph-small">
-		<li>Estudiante</li>
-		<li>150 mts</li>
-		<li>Conductor</li>
+		<div class="li-item">
+			<img src="assets/svgs/Student.svg" />
+			<li>Estudiante</li>
+		</div>
+		<div class="li-item">
+			<img src="assets/svgs/Walk.svg" />
+			<li>150 mts</li>
+		</div>
+		<div class="li-item">
+			<img src="assets/svgs/Favourite.svg" />
+			<li>Conductor</li>
+		</div>
 	</ul>
 
 	<section>
 		<h4 class="paragraph-large">Información de contacto</h4>
 		<div class="phone-number-container paragraph-medium">
+			<img src="assets/svgs/Telephone.svg" />
 			<span class="phone-number-label">Número de teléfono</span>
 			<span class="phone-number">04147652369</span>
 		</div>
 		<div class="phone-number-container paragraph-medium">
+			<img src="assets/svgs/Alert.svg" />
 			<span class="phone-number-label">Contacto de emergencia</span>
 			<span class="phone-number">04147652369</span>
 		</div>
@@ -30,9 +41,41 @@
 
 	<section>
 		<h4 class="paragraph-large">Mis Destinos</h4>
+		<div class="list-container">
+			<div class="item-container">
+				<img src="assets/svgs/Destination.svg" />
+				<p class="label-small">Urb. Isla Dorada</p>
+			</div>
+			<div class="item-container">
+				<img src="assets/svgs/Destination.svg" />
+				<p class="label-small">Los olivos</p>
+			</div>
+			<div>
+				<button size="small" mButton>Añadir</button>
+			</div>
+		</div>
 	</section>
 
 	<section>
 		<h4 class="paragraph-large">Mis Rutas</h4>
+		<div class="list-container">
+			<div class="item-container">
+				<img src="assets/svgs/Route.svg" />
+				<p class="label-small">Av Atlántico</p>
+			</div>
+			<div class="item-container">
+				<img src="assets/svgs/Route.svg" />
+				<p class="label-small">Paseo Caroní</p>
+			</div>
+			<div>
+				<button size="small" mButton>Añadir</button>
+			</div>
+		</div>
 	</section>
+
+	<section class="action-buttons-container">
+		<button mButton size="large" severity="primary"> Cerrar Sesión</button>
+		<button mButton appearance="outlined" size="large"> Desactivar Cuenta</button>
+	</section>
+
 </page-layout>
