--- a/apps/client/src/app/pages/profile/profile.component.css
+++ b/apps/client/src/app/pages/profile/profile.component.css
@@ -44,20 +44,29 @@ section {
 	color: var(--primary-text-value);
 }
 
-.user-preferences .li-item {
+.user-preference-item {
 	display: flex;
 	align-items: center;
 	gap: .5625rem;
 }
 
-.li-item img {
-	width: var(--icon-s);
+.user-preference-item img {
+	width: var(--icon-m);
 }
 
 .phone-number-container {
 	display: flex;
+	align-items: center;
 	justify-content: space-between;
 	margin-top: .25rem;
+}
+
+.phone-number-label-container {
+	display: flex;
+	align-items: center;
+	justify-content: start;
+	gap: .625rem;
+	margin-top: 0.4rem;
 }
 
 .phone-number {
@@ -69,25 +78,43 @@ section {
 	color: #878eaa;
 }
 
+.phone-number-icon {
+	width: var(--icon-s);
+	aspect-ratio: 1;
+}
+
 .list-container {
 	display: flex;
 	align-items: center;
-	gap: 1.1875rem;
+	gap: 1rem;
 	margin-top: .8125rem;
 }
 
-.item-container {
+.chip-container {
+	display: flex;
+	align-items: center;
 	background-color: #e7e1db;
-	padding: .4375rem .9375rem;
+	padding: .5rem .9375rem;
 	border-radius: 1rem;
+	gap: .125rem;
 }
 
-.item-container p {
+.chip-container p {
 	color: var(--primary-text-value);
+	text-wrap: nowrap;
+}
+
+.chip-container img {
+	width: var(--icon-s);
 }
 
 .action-buttons-container {
 	display: flex;
 	flex-direction: column;
 	gap: .625rem;
+}
+
+.add-button {
+	height: 2.125rem;
+	align-items: center;
 }
