fix: show user name in profile

--- a/apps/client/src/app/pages/profile/profile.component.html
+++ b/apps/client/src/app/pages/profile/profile.component.html
@@ -1,5 +1,5 @@
 <page-layout>
-	<h1 class="heading-xsmall">María Paula Porero Fardo</h1>
+	<h1 class="heading-xsmall">{{ profile?.firstName ? profile!.firstName + ' ' + profile!.lastName : '--'}}</h1>
 
 	<img [src]="profile?.profilePicSrc" class="avatar" width="88px" height="88px" />
 
