--- a/apps/client/src/app/shared/ui/components/radio-button/radio-button.component.html
+++ b/apps/client/src/app/shared/ui/components/radio-button/radio-button.component.html
@@ -1,4 +1,4 @@
 <div class="input-container">
-	<label [for]="inputId" class="label-large">{{label}}</label>
+	<label [for]="inputId" class="label-medium">{{label}}</label>
 	<input class="label-large" [name]="groupName" type="radio" [formControl]="control" [id]="inputId" [value]="value" />
 </div>
