fix: tab bar empty space in pages layout

--- a/apps/client/src/app/pages/edit-profile/edit-profile.component.html
+++ b/apps/client/src/app/pages/edit-profile/edit-profile.component.html
@@ -1,4 +1,4 @@
-<page-layout>
+<page-layout [hasTabBar]="true">
 
 	<header>
 		<a class="label-small" routerLink="/app/profile" [routerLinkActive]="'is-active'"
@@ -14,8 +14,8 @@
 			@if(uploadProfilePic) {
 			<div class="input-profile-pic-container">
 				<label for="profilePic" class="label-medium">Subir foto de perfil</label>
-				<input type="file" (change)="onImageUpload($event)" id="profilePic"
-					accept="image/png,image/jpg,image/jpeg" class="input-profile-pic" />
+				<input type="file" (change)="onImageUpload($event)" id="profilePic" accept="image/png,image/jpg,image/jpeg"
+					class="input-profile-pic" />
 			</div>
 			}@else {
 			<div class="profilePic-container">
@@ -31,8 +31,8 @@
 			<div class="radio-input-container">
 				<label for="role" class="label-medium">Rol preferido</label>
 				<div class="radio-button-group">
-					<radio-button inputId="role-driver" groupName="role"
-						[control]="editProfileFormGroup.controls.preferredRole" value="driver" label="Conductor" />
+					<radio-button inputId="role-driver" groupName="role" [control]="editProfileFormGroup.controls.preferredRole"
+						value="driver" label="Conductor" />
 					<radio-button inputId="role-passenger" groupName="role"
 						[control]="editProfileFormGroup.controls.preferredRole" value="passenger" label="Pasajero" />
 				</div>
@@ -43,8 +43,8 @@
 				<input type="number" name="walkDistance" id="walkDistance" formControlName="walkDistance">
 			</div>
 
-			<text-input inputId="phoneNumber" [control]="editProfileFormGroup.controls.phoneNumber"
-				label="Número de Teléfono" placeholder="Ingrese el número de teléfono" />
+			<text-input inputId="phoneNumber" [control]="editProfileFormGroup.controls.phoneNumber" label="Número de Teléfono"
+				placeholder="Ingrese el número de teléfono" />
 			<text-input inputId="emergencyContactPhoneNumber"
 				[control]="editProfileFormGroup.controls.emergencyContactPhoneNumber" label="Contacto de emergencia"
 				placeholder="Ingrese el número del contacto" />
