--- a/apps/client/src/app/pages/edit-profile/edit-profile.component.html
+++ b/apps/client/src/app/pages/edit-profile/edit-profile.component.html
@@ -3,7 +3,7 @@
 	<header>
 		<a class="label-small" routerLink="/app/profile" [routerLinkActive]="'is-active'"
 			[routerLinkActiveOptions]="{exact: true}">
-			<img src="assets/svgs/Arrow-left.svg" />
+			<img src="assets/svgs/ArrowLeft.svg" />
 		</a>
 		<h1 class="heading-xsmall">{{ profile?.firstName ? profile!.firstName + ' ' + profile!.lastName : '--'}}</h1>
 	</header>
