--- a/apps/client/src/app/pages/home/home.component.html
+++ b/apps/client/src/app/pages/home/home.component.html
@@ -1,1 +1,7 @@
-<p>home works!</p>
+<page-layout [hasTabBar]="true">
+	<div>Conductor? 🤨</div>
+	<label class="switch">
+		<input type="checkbox" [checked]="isUserRoleToggleChecked" (change)="handleUserRoleToggle($event)">
+		<span class="slider round"></span>
+	</label>
+</page-layout>
