feat: animation on tab bar change

--- a/apps/client/src/app/core/components/tab-bar/tab-bar-layout/tab-bar-layout.component.html
+++ b/apps/client/src/app/core/components/tab-bar/tab-bar-layout/tab-bar-layout.component.html
@@ -1,7 +1,7 @@
 <router-outlet></router-outlet>
 
 @if (isPassenger) {
-<passenger-tab-bar></passenger-tab-bar>
+<passenger-tab-bar @InOut></passenger-tab-bar>
 } @else {
-<driver-tab-bar></driver-tab-bar>
+<driver-tab-bar @InOut></driver-tab-bar>
 }
