feat: car component with dynamic color

--- a/apps/client/src/app/pages/my-vehicles/my-vehicles.component.html
+++ b/apps/client/src/app/pages/my-vehicles/my-vehicles.component.html
@@ -5,7 +5,7 @@
 
 	<section>
 		<div class="card-cars-container">
-			<img src="assets/images/cars/black-car.png" alt="black-car">
+			<movic-car color="#292F8D"></movic-car>
 			<div class="card-info-container">
 				<div class="card-header-container">
 					<h3>Chevrolet | Spark</h3>
