--- a/apps/client/src/app/pages/my-vehicles/my-vehicles.component.css
+++ b/apps/client/src/app/pages/my-vehicles/my-vehicles.component.css
@@ -10,7 +10,7 @@ h1 {
 	flex-direction: column;
 	justify-content: center;
 	padding: .875rem;
-	border: 2px solid red;
+	border-radius: 16px;
 	background-color: #efefef;
 }
 
