--- a/apps/client/src/app/pages/my-vehicles/my-vehicles.component.html
+++ b/apps/client/src/app/pages/my-vehicles/my-vehicles.component.html
@@ -5,19 +5,19 @@
 
 	<section>
 		<div class="card-cars-container">
-			<movic-car color="#292F8D"></movic-car>
+			<movic-car></movic-car>
 			<div class="card-info-container">
 				<div class="card-header-container">
 					<h3>Chevrolet | Spark</h3>
 					<h3>A17BN1E</h3>
 				</div>
 				<div class="card-specs-container">
-					<p>4</p>
-					<p>negro</p>
+					<span class="car-detail"><img src="assets/svgs/CarSeat.svg" /> <strong>4</strong></span>
+					<span class="car-detail"><img src="assets/svgs/PaintPalette.svg" /> <strong>Negro</strong></span>
 				</div>
 				<div class="card-buttons-container">
-					<button>Eliminar</button>
-					<button>Editar</button>
+					<button mButton severity="tertiary">Eliminar</button>
+					<button mButton severity="tertiary">Editar</button>
 				</div>
 			</div>
 		</div>
