--- a/apps/client/src/app/pages/edit-profile/edit-profile.component.html
+++ b/apps/client/src/app/pages/edit-profile/edit-profile.component.html
@@ -35,8 +35,7 @@
 			</div>
 
 			<number-input inputId="walkDistance" [control]="editProfileFormGroup.controls.walkDistance"
-				label="Distancia dispuesto a caminar (metros)" placeholder="Ingrese la distancia en metros" [min]="20"
-				[max]="150" />
+				label="Distancia dispuesto a caminar (metros)" placeholder="Ingrese la distancia en metros" />
 
 			<text-input inputId="phoneNumber" [control]="editProfileFormGroup.controls.phoneNumber"
 				label="Número de Teléfono" placeholder="Ingrese el número de teléfono" />
