--- a/apps/client/src/app/shared/ui/components/dropdown/dropdown.component.html
+++ b/apps/client/src/app/shared/ui/components/dropdown/dropdown.component.html
@@ -1,16 +1,7 @@
-<label for="color-select" class="label-medium">Color</label>
+<label [for]="inputId" class="label-medium">{{label}}</label>
 
-<select name="colors" id="color-select">
-	<option value="">Seleccione un color de vehículo</option>
-	<option value="black">Negro</option>
-	<option value="white">Blanco</option>
-	<option value="blue">Azul</option>
-	<option value="gray">Gris</option>
-	<option value="silver">Plateado</option>
-	<option value="red">Rojo</option>
-	<option value="green">Verde</option>
-	<option value="yellow">Amarillo</option>
-	<option value="purple">Morado</option>
-	<option value="pink">Rosado</option>
-	<option value="orange">Naranja</option>
+<select [id]="inputId" [formControl]="control">
+	@for (option of options; track option.value) {
+	<option [value]="option.value">{{option.label}}</option>
+	}
 </select>
