--- a/apps/client/src/app/pages/edit-vehicle/edit-vehicle.component.html
+++ b/apps/client/src/app/pages/edit-vehicle/edit-vehicle.component.html
@@ -13,7 +13,8 @@
 				placeholder="Ingrese la cantidad de asientos disponibles"
 				[control]="editVehicleFormGroup.controls.seatQuantity" [min]="1" [max]="4" />
 
-			<dropdown inputId="colors" [control]="editVehicleFormGroup.controls.color" />
+			<dropdown inputId="colors" [control]="editVehicleFormGroup.controls.color" [options]="colors"
+				label="Color" />
 
 			<text-input inputId="plate" label="Placa" placeholder="Ingrese la placa"
 				[control]="editVehicleFormGroup.controls.plate" />
@@ -22,7 +23,8 @@
 			<text-input inputId="model" label="Modelo" placeholder="Ingrese el modelo"
 				[control]="editVehicleFormGroup.controls.model" />
 
-			<button mButton severity="secondary" size="large" [disabled]="editVehicleFormGroup.invalid">Editar
+			<button mButton severity="secondary" size="large" [disabled]="editVehicleFormGroup.invalid"
+				(click)="handleSubmit()">Editar
 				Vehículo</button>
 
 		</form>
